Upgrade to Spring Boot 3.0.0 (#1287)
* applied `boot-autoconfiguration-update`

* extract sleuth dependency from spring-cloud-dependencies to io.micrometer dependency

* add jakarta dependency

* extends crud repository for sorting repositories

* remove joda time and ThreeTenBackport

* remove deprecated method `getPersistentEntityTypes`

* add sleuth starter dependency since it's not included in spring cloud dependencies

* add dependencies for micrometer tracing

* upgrade java in maven plugin to 17

* remove transitive dependencies

* fix broken unit tests

* remove sleuth starter dependency

* add io.micrometer dependency

* refacter test class

* remove BraveHttpConfiguration as it is deprecated

* add actuator starter dependency

* remove BraveHttpConfiguration

* fix broken unit tests

* remove usage of a deprecated constructor

* code refactor

* remove the usage of a deprecated constructor

* refactor tests

* change to functional programming model

* remove deprecated class in comments

* fix broken unit tests

* rebase

* fix broken unit testd

* rebase

* change extended binding properties tests according to spring style

* improve line coverage

* update errorprone to 2.16

* refactor code

* fix broken tests

* log nested exception message explicitly

* refactor test code

* remove deprecated class `ClassTypeInformation`

* fix broken unit test

* remove usage of `ClassTypeInformation.class`

* add generics so that unit tests can pass

* change name of an overridden method: `getPersistentEntityTypeInformation`

* fix broken unit test

* remove spring native support module

* replace javax to jakarta

* change package for `LocalServerPort`

* remove deprecated class `WebSecurityConfigurerAdapter`

* implement new auto configuration style

* experiment with samples

* merge dependencies pom

* change sampling property

* exclude `ZipkinAutoConfiguration`
